# fieldops

./: .gitignore  Dockerfile  README.md  docker-compose.yml  start-demo.sh
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  artifacts.py  engine.py  evaluation.py  hospital_intel.py  llamaindex_rag.py  llm_client.py  llm_triage.py  logistics.py  main.py  memory.py  models.py  orchestrator.py  overwatch.py  pre_notification.py  rag.py  runtime.py  scenario_loader.py  triage.py  utils.py
backend/app/scripts/: run_evaluations.py
backend/tests/: test_logistics.py  test_rubric_features.py  test_simulation.py  test_triage.py
data/: ambulances.json  hospitals.json
data/rag/: hospital_capabilities.md  ics_mci.md  jumpstart_protocol.md  salt_guidelines.md  start_protocol.md
data/scenarios/: bridge-collapse-standard.json  heavy.json  light.json
docs/: architecture.md  autonomous_improvement_prompt.md  autonomous_improvement_workflow.md  judging_brief.md  presentation_script.md
docs/results/: evaluation_results.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: AgentFeed.tsx  PatientTable.tsx  PittsburghMap.tsx  PreNotifCard.tsx
scripts/: run-improvement-loop.ps1
shared/: README.md  incident.schema.json
