[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fieldops-backend"
version = "0.1.0"
description = "FieldOps backend and simulation engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "reportlab>=4.2.0",
  "llama-index>=0.12.0",
  "llama-index-llms-gemini>=0.4.0",
  "llama-index-embeddings-gemini>=0.3.0",
  "google-generativeai>=0.8.0",
  "google-genai>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
